# vibe_coding_practice

./: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE
.github/: copilot-instructions.md  spec.md
.github/instructions/: legacy-trae-context.md
.github/workflows/: ci.yml
.trae/instructions/: instructions.md
.trae/skills/: cpp_programming_skill.md  game_development_skill.md
.trae/spec/: dependencies.md  game_plan.md  spec.md
log/: dev_log_user.md
scripts/: build_and_test.sh
src/: BUILD.bazel  main.cc
src/game/: Attack.cpp  Attack.h  BUILD.bazel  Character.cpp  Character.h  Game.cpp  Game.h  Input.cpp  Input.h  Renderer.cpp  Renderer.h
src/utils/: BUILD.bazel
test/: BUILD.bazel  agent_test.cc
