# Bazel build file for 2D fighting game

# Common flags and includes
cc_library(
    name = "common",
    srcs = [],
    hdrs = [],
    includes = ["src"],
    visibility = ["//src:__pkg__", "//test:__pkg__"],
)

# Main executable
cc_binary(
    name = "main",
    srcs = ["src/main.cc"],
    deps = [
        "//src/game",
        "//src/utils",
        "@glfw//:glfw",
        "@glew//:glew",
    ],
)

# Game library
define_module("game", "src/game")

# Utils library
define_module("utils", "src/utils")

# Test suite
cc_test(
    name = "agent_test",
    srcs = ["test/agent_test.cc"],
    deps = [
        "//src/game",
        "//src/utils",
        "@gtest//:gtest",
        "@gtest//:gtest_main",
    ],
)

def define_module(name, path):
    cc_library(
        name = name,
        srcs = glob([path + "/*.cpp"]),
        hdrs = glob([path + "/*.h"]),
        includes = ["src"],
        deps = [
            "@glfw//:glfw",
            "@glew//:glew",
        ],
        visibility = ["//src:__pkg__", "//test:__pkg__"],
    )
