# Bazel BUILD file for source code

load("@rules_cc//cc:defs.bzl", "cc_binary")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "main",
    srcs = ["main.cc"],
    linkopts = [
        "-lglfw",
        "-lGLEW",
        "-lGL",
        "-lX11",
        "-lGLU",
    ],
)

