# Bazel BUILD file for game library

load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "game",
    srcs = glob(["*.cpp"]),
    hdrs = glob(["*.h"]),
    includes = ["src"],
    linkopts = [
        "-lglfw",
        "-lGLEW",
        "-lGL",
        "-lX11",
        "-lGLU",
    ],
)
